<?php

declare(strict_types=1);

namespace App\Models;

// use Illuminate\Contracts\Auth\MustVerifyEmail;
use App\Enums\MembershipStatus;
use App\Support\CurrentOrganization;
use Database\Factories\UserFactory;
use Illuminate\Database\Eloquent\Attributes\Fillable;
use Illuminate\Database\Eloquent\Attributes\Hidden;
use Illuminate\Database\Eloquent\Factories\HasFactory;
use Illuminate\Database\Eloquent\Relations\BelongsToMany;
use Illuminate\Database\Eloquent\Relations\HasMany;
use Illuminate\Foundation\Auth\User as Authenticatable;
use Illuminate\Notifications\Notifiable;

#[Fillable(['name', 'email', 'password', 'email_verification_token', 'email_verification_token_expires_at'])]
#[Hidden(['password', 'remember_token', 'email_verification_token', 'email_verification_token_expires_at'])]
class User extends Authenticatable
{
    /** @use HasFactory<UserFactory> */
    use HasFactory, Notifiable;

    private ?Membership $currentMembership = null;

    private bool $currentMembershipResolved = false;

    /**
     * Get the attributes that should be cast.
     *
     * @return array<string, string>
     */
    protected function casts(): array
    {
        return [
            'email_verified_at' => 'datetime',
            'password' => 'hashed',
            'email_verification_token_expires_at' => 'datetime',
        ];
    }

    /**
     * @return HasMany<Membership, $this>
     */
    public function memberships(): HasMany
    {
        return $this->hasMany(Membership::class);
    }

    /**
     * The user's global credential: specialties they are qualified to
     * practise, independent of any organization.
     *
     * @return BelongsToMany<Specialty, $this>
     */
    public function specialties(): BelongsToMany
    {
        return $this->belongsToMany(Specialty::class, 'user_specialties');
    }

    /**
     * The user's active membership in the currently active organization
     * (App\Support\CurrentOrganization), memoized per request.
     */
    public function currentMembership(): ?Membership
    {
        if ($this->currentMembershipResolved) {
            return $this->currentMembership;
        }

        $this->currentMembershipResolved = true;

        $organizationId = app(CurrentOrganization::class)->get();

        if ($organizationId === null) {
            return $this->currentMembership = null;
        }

        return $this->currentMembership = $this->memberships()
            ->where('organization_id', $organizationId)
            ->where('status', MembershipStatus::Active)
            ->first();
    }
}
