// Clini — core scheduling domain DER
// Paste into https://dbdiagram.io to visualize.
// Scope: MVP only (agenda, online booking, availability, cancellations,
// reschedules, manual entry, reminders) — see docs/product/roadmap.md.
// Excludes clinical history, billing, integrations (future modules).
//
// Validated against docs/product/checklist-schema.md (derived from
// docs/product/casos-de-uso.md). Conventions decided during that validation:
//   - Timestamps (*_at) are stored in UTC and rendered in organizations.timezone;
//     the slot grid is computed in the org timezone. availabilities use local
//     wall-clock `time` for recurring rules.
//   - Overlap exclusion (CU-20/36) is enforced in the booking Action inside a
//     locked transaction, NOT by a DB exclusion constraint (accepted trade-off).
//   - Soft deletes (deleted_at) on the domain tables; FKs default to restrict,
//     with set null on optional references — nothing is hard-deleted in normal use.

Project clini {
  database_type: 'PostgreSQL'
  Note: 'Core scheduling domain for Clini MVP.'
}

Enum membership_role {
  owner
  admin
  professional
  staff
}

Enum membership_status {
  active
  inactive
  suspended
}

Enum document_type {
  dni
  passport
  insurance_id
}

Enum sex {
  f
  m
  u
}

Enum appointment_status {
  scheduled
  confirmed
  arrived
  completed
  no_show
  cancelled
  rescheduled
}

Enum appointment_origin {
  online
  manual
}

Enum availability_exception_type {
  blocked
  extra
}

Enum reminder_channel {
  email
  sms
  whatsapp
}

Enum reminder_status {
  pending
  sent
  failed
}

Table organizations {
  id bigint [pk, increment]
  name varchar [not null]
  slug varchar [not null, unique]
  timezone varchar [not null, note: 'IANA tz, e.g. America/Argentina/Buenos_Aires']
  created_at timestamp [not null]
  updated_at timestamp [not null]
  deleted_at timestamp [null]

  Note: 'Address lives in the polymorphic addresses table (addressable = organization).'
}

Table users {
  id bigint [pk, increment]
  name varchar [not null]
  email varchar [not null, unique]
  password varchar [not null]
  created_at timestamp [not null]
  updated_at timestamp [not null]

  Note: 'Anyone who logs in to the panel: owners, admins, professionals, staff. Not patients.'
}

Table memberships {
  id bigint [pk, increment]
  organization_id bigint [not null]
  user_id bigint [not null]
  role membership_role [not null]
  status membership_status [not null, default: 'active']
  slug varchar [null, note: 'Optional public booking link for a professional membership; shares a flat, globally unique namespace with organizations.slug, validated in the Action rather than a DB constraint.']
  created_at timestamp [not null]
  updated_at timestamp [not null]
  deleted_at timestamp [null]

  indexes {
    (organization_id, user_id) [unique]
    slug
  }

  Note: '''
    Tenant boundary: access and role are always scoped to one membership.
    A professional working at 2 organizations has 2 rows here, with
    separate availabilities and services per membership — schedules
    don't cross organizations. status gates feature access without
    deleting history (CU-05); an inactive/suspended member keeps its
    past appointments. Specialties are attached via professional_specialties.
  '''
}

Table specialties {
  id bigint [pk, increment]
  name varchar [not null, unique]
  created_at timestamp [not null]
  updated_at timestamp [not null]
  deleted_at timestamp [null]

  Note: '''
    Global, read-only catalog (CU-15/43), owned by an external management
    app — not editable from Clini. No organization_id: unlike most tables
    in this file, this one is NOT tenant-scoped. Seeded for dev/test only.
  '''
}

Table user_specialties {
  id bigint [pk, increment]
  user_id bigint [not null]
  specialty_id bigint [not null]
  created_at timestamp [not null]
  updated_at timestamp [not null]

  indexes {
    (user_id, specialty_id) [unique]
  }

  Note: '''
    The professional's global credential (CU-43): specialties a User is
    qualified to practise, independent of any organization. Edited only by
    the professional themself. Also the composite-FK target that keeps
    professional_specialties a subset of this table.
  '''
}

Table professional_specialties {
  id bigint [pk, increment]
  organization_id bigint [not null]
  membership_id bigint [not null]
  user_id bigint [not null, note: 'denormalized from membership_id, for the composite FK into user_specialties']
  specialty_id bigint [not null]

  indexes {
    (membership_id, specialty_id) [unique]
  }

  Note: '''
    What a professional actually practises in ONE organization (CU-34/43),
    always a subset of their user_specialties credential — enforced at the
    DB level by a composite FK on (user_id, specialty_id) into
    user_specialties, in addition to (membership_id, organization_id) into
    memberships.
  '''
}

Table patients {
  id bigint [pk, increment]
  name varchar [not null]
  email varchar [null]
  phone varchar [null]
  document_type document_type [not null, default: 'dni', note: 'DNI by default; passport / insurance_id as alternatives (CU-37)']
  document_number varchar [not null]
  sex sex [null]
  birth_date date [null]
  insurance_provider_id bigint [null]
  created_by bigint [null, note: 'user who created the record; null when self-created via online booking']
  created_at timestamp [not null]
  updated_at timestamp [not null]
  deleted_at timestamp [null]

  indexes {
    (document_type, document_number) [unique]
  }

  Note: '''
    Global, NOT organization-scoped (see CLAUDE.md). The same patient row
    is reused across organizations; identity is the (document_type,
    document_number) pair (CU-37), which drives find-or-create dedup during
    manual entry and online booking. The org association is NOT stored: a
    patient's activity is reconstructed from appointments.organization_id
    (CU-10). created_by is an audit trace only, not tenant scoping.
  '''
}

Table services {
  id bigint [pk, increment]
  name varchar [not null, unique]
  created_at timestamp [not null]
  updated_at timestamp [not null]
  deleted_at timestamp [null]

  Note: '''
    Global, read-only catalog (CU-15), owned by an external management
    app — not editable from Clini. No organization_id: unlike most tables
    in this file, this one is NOT tenant-scoped. Seeded for dev/test only.
    duration_minutes/price_cents live on professional_services, not here.
  '''
}

Table professional_services {
  id bigint [pk, increment]
  organization_id bigint [not null]
  membership_id bigint [not null]
  service_id bigint [not null]
  duration_minutes integer [not null]
  price_cents integer [null, note: 'nullable until Mercado Pago integration lands']
  currency varchar [not null, default: 'ARS', note: 'ISO 4217; fixed to ARS, never exposed through the API']
  created_at timestamp [not null]
  updated_at timestamp [not null]

  indexes {
    (membership_id, service_id) [unique]
  }

  Note: 'Which services a given professional (membership) offers, with the duration/price of that specific assignment (CU-15/16/17).'
}

Table availabilities {
  id bigint [pk, increment]
  organization_id bigint [not null]
  membership_id bigint [not null]
  day_of_week smallint [not null, note: '0 = Sunday .. 6 = Saturday']
  start_time time [not null]
  end_time time [not null]
  created_at timestamp [not null]
  updated_at timestamp [not null]

  Note: 'Recurring weekly schedule per professional (membership), one row per block. Local wall-clock time in the org timezone.'
}

Table availability_exceptions {
  id bigint [pk, increment]
  organization_id bigint [not null]
  membership_id bigint [null, note: 'null = organization-wide exception (e.g. holiday), affects every professional (CU-13)']
  type availability_exception_type [not null]
  start_at timestamp [not null]
  end_at timestamp [not null]
  reason varchar [null]
  created_at timestamp [not null]
  updated_at timestamp [not null]

  Note: '''
    One-off overrides to the recurring schedule: a blocked range (day off,
    holiday) or extra availability outside the usual hours. A slot is removed
    when EITHER the professional OR the organization is blocked for it.
  '''
}

Table appointments {
  id bigint [pk, increment]
  organization_id bigint [not null, note: 'tenant-scoping column, present on every table below except patients — see CLAUDE.md']
  membership_id bigint [not null, note: 'the professional']
  patient_id bigint [not null]
  service_id bigint [not null]
  created_by bigint [null, note: 'user who created it; null when created via public online booking']
  origin appointment_origin [not null, default: 'manual', note: 'online booking sets online; panel entry sets manual (CU-18/19)']
  status appointment_status [not null, default: 'scheduled']
  start_at timestamp [not null]
  end_at timestamp [not null]
  reason varchar [null, note: 'free-text visit reason (CU-49), distinct from the future clinical note']
  confirmed_at timestamp [null]
  arrived_at timestamp [null]
  completed_at timestamp [null]
  cancelled_at timestamp [null]
  cancelled_by bigint [null]
  cancellation_reason varchar [null]
  rescheduled_from_id bigint [null, note: 'previous appointment this one replaces, if rescheduled']
  notes text [null]
  created_at timestamp [not null]
  updated_at timestamp [not null]
  deleted_at timestamp [null]

  indexes {
    (membership_id, start_at)
  }

  Note: 'Overlap exclusion (CU-20/36) is enforced in the booking Action under a locked transaction, not by a DB constraint — see docs/adr/0004-exclusion-de-solapamiento-en-la-action.md.'
}

Table insurance_providers {
  id bigint [pk, increment]
  name varchar [not null, unique]
  created_at timestamp [not null]
  updated_at timestamp [not null]

  Note: 'Global catalog of health-insurance providers (obra social, CU-48). Stored now, fully used with billing later.'
}

Table addresses {
  id bigint [pk, increment]
  addressable_type varchar [not null]
  addressable_id bigint [not null]
  street varchar [null]
  city varchar [null]
  state varchar [null]
  postal_code varchar [null]
  country varchar [null]
  created_at timestamp [not null]
  updated_at timestamp [not null]
  deleted_at timestamp [null]

  indexes {
    (addressable_type, addressable_id)
  }

  Note: 'Polymorphic address (CU-50). Only organization addresses are used in the MVP; patient addresses are deferred but not blocked.'
}

Table reminders {
  id bigint [pk, increment]
  organization_id bigint [not null]
  appointment_id bigint [not null]
  channel reminder_channel [not null]
  status reminder_status [not null, default: 'pending']
  scheduled_at timestamp [not null]
  sent_at timestamp [null]
  created_at timestamp [not null]
  updated_at timestamp [not null]

  Note: 'Patient reminder for an appointment. A polymorphic recipient (User or Patient, CU-29) is deferred to a future decoupled notifications module (CU-27/28).'
}

Ref: memberships.organization_id > organizations.id [delete: restrict]
Ref: memberships.user_id > users.id [delete: restrict]

Ref: user_specialties.user_id > users.id [delete: cascade]
Ref: user_specialties.specialty_id > specialties.id [delete: restrict]

Ref: professional_specialties.organization_id > organizations.id [delete: restrict]
Ref: professional_specialties.membership_id > memberships.id [delete: cascade]
Ref: professional_specialties.user_id > users.id [delete: cascade]
Ref: professional_specialties.specialty_id > specialties.id [delete: cascade]

Ref: patients.insurance_provider_id > insurance_providers.id [delete: set null]
Ref: patients.created_by > users.id [delete: set null]

Ref: professional_services.organization_id > organizations.id [delete: restrict]
Ref: professional_services.membership_id > memberships.id [delete: cascade]
Ref: professional_services.service_id > services.id [delete: restrict]

Ref: availabilities.organization_id > organizations.id [delete: restrict]
Ref: availabilities.membership_id > memberships.id [delete: cascade]

Ref: availability_exceptions.organization_id > organizations.id [delete: restrict]
Ref: availability_exceptions.membership_id > memberships.id [delete: cascade]

Ref: appointments.organization_id > organizations.id [delete: restrict]
Ref: appointments.membership_id > memberships.id [delete: restrict]
Ref: appointments.patient_id > patients.id [delete: restrict]
Ref: appointments.service_id > services.id [delete: restrict]
Ref: appointments.created_by > users.id [delete: set null]
Ref: appointments.cancelled_by > users.id [delete: set null]
Ref: appointments.rescheduled_from_id > appointments.id [delete: set null]

Ref: reminders.organization_id > organizations.id [delete: restrict]
Ref: reminders.appointment_id > appointments.id [delete: cascade]
